[gd_scene load_steps=25 format=2]

[ext_resource path="res://Door2.png" type="Texture" id=1]
[ext_resource path="res://Torch.gd" type="Script" id=2]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OffFakelSdumom/OffFakelSdumom2.png" type="Texture" id=3]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OnFakel/OnFakel3.png" type="Texture" id=4]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OnFakel/OnFakel2.png" type="Texture" id=5]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OffFakelSdumom/OffFakelSdumom5.png" type="Texture" id=6]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OnFakel/OnFakel4.png" type="Texture" id=7]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OnFakel/OnFakel5.png" type="Texture" id=8]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OffFakelSdumom/OffFakelSdumom3.png" type="Texture" id=9]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/offFakelBezDuma/OffFakelbezDuma4.png" type="Texture" id=10]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/offFakelBezDuma/OffFakelbezDuma2.png" type="Texture" id=11]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/offFakelBezDuma/OffFakelbezDuma5.png" type="Texture" id=12]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/offFakelBezDuma/OffFakelbezDuma3.png" type="Texture" id=13]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OnFakel/OnFakel6.png" type="Texture" id=14]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OffFakelSdumom/OffFakelSdumom1.png" type="Texture" id=15]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OnFakel/OnFakel1.png" type="Texture" id=16]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OffFakelSdumom/OffFakelSdumom6.png" type="Texture" id=17]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/OffFakelSdumom/OffFakelSdumom4.png" type="Texture" id=18]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/offFakelBezDuma/OffFakelbezDuma6.png" type="Texture" id=19]
[ext_resource path="res://Anims/гл. гр/Декорации/Факел/offFakelBezDuma/OffFakelbezDuma1.png" type="Texture" id=20]
[ext_resource path="res://32131.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 6 ), ExtResource( 17 ) ],
"loop": true,
"name": "ofTorchSmoke",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 19 ) ],
"loop": true,
"name": "ofTorchWithoutSmoke",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 14 ) ],
"loop": true,
"name": "torchOn",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5, 75.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 3.33333, 3.5 )

[node name="Torch" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "torchOn"
frame = 2
playing = true

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.5, 56.5 )
shape = SubResource( 2 )

[node name="Entering" type="Node2D" parent="."]
visible = false
position = Vector2( -20.6667, -34.6667 )

[node name="Area2D" type="Area2D" parent="Entering"]
position = Vector2( 20.6667, 7.33334 )
z_index = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entering/Area2D"]
position = Vector2( -3.8147e-06, 0.166656 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="Entering"]
position = Vector2( 20.6666, 7.33203 )
scale = Vector2( 0.01, 0.01 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 164.376, 166.927, 602.507, 676.232 )

[node name="Timer_Random_Energy_Light" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Timer_Without_Smoke" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 21 )
texture_scale = 0.25
color = Color( 1, 0.847059, 0.309804, 1 )
energy = 2.8

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="mouse_entered" from="Entering/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Entering/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="timeout" from="Timer_Random_Energy_Light" to="." method="_on_Timer_Random_Energy_Light_timeout"]
[connection signal="timeout" from="Timer_Without_Smoke" to="." method="_on_Timer_Without_Smoke_timeout"]
